--- a/package.json
+++ b/package.json
@@ -5,18 +5,37 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "algoliasearch": "^3.34.0",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.13.73",
     "gatsby-image": "^2.2.10",
+    "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-offline": "^2.2.7",
     "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-sharp": "^2.2.13",
+    "gatsby-plugin-sitemap": "^2.2.11",
+    "gatsby-plugin-styled-components": "^3.1.3",
+    "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-remark-images": "^3.1.20",
+    "gatsby-remark-lazy-load": "^1.0.1",
+    "gatsby-remark-prismjs": "^3.3.12",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.1.11",
+    "gatsby-transformer-remark": "^2.6.21",
     "gatsby-transformer-sharp": "^2.2.7",
+    "gsap": "^2.1.3",
+    "lazysizes": "^5.1.1",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^5.7.0",
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.4.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
@@ -28,6 +47,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "develop:playground": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
